// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccessConsoles Empty 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-console"
  />
</DocumentFragment>
`;

exports[`AccessConsoles with DesktopViewer 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-console"
  />
</DocumentFragment>
`;

exports[`AccessConsoles with SerialConsole and VncConsole as children 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-console"
  >
    <div
      class="pf-v6-c-console__actions"
    >
      <button
        aria-expanded="false"
        aria-label="Console type toggle"
        class="pf-v6-c-menu-toggle"
        id="pf-v6-c-console__type-selector"
        style="width: 100%;"
        type="button"
      >
        <span
          class="pf-v6-c-menu-toggle__controls"
        >
          <span
            class="pf-v6-c-menu-toggle__toggle-icon"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              viewBox="0 0 320 512"
              width="1em"
            >
              <path
                d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
              />
            </svg>
          </span>
        </span>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AccessConsoles with SerialConsole as a single child 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-console"
  />
</DocumentFragment>
`;

exports[`AccessConsoles with VncConsole as a single child 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-console"
  />
</DocumentFragment>
`;

exports[`AccessConsoles with preselected SerialConsole 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-console"
  >
    <div
      class="pf-v6-c-console__actions-serial"
    >
      <button
        aria-disabled="false"
        class="pf-v6-c-button pf-m-secondary"
        data-ouia-component-id="OUIA-Generated-Button-secondary-1"
        data-ouia-component-type="PF5/Button"
        data-ouia-safe="true"
        type="button"
      >
        Disconnect
      </button>
      <button
        aria-disabled="false"
        class="pf-v6-c-button pf-m-secondary"
        data-ouia-component-id="OUIA-Generated-Button-secondary-2"
        data-ouia-component-type="PF5/Button"
        data-ouia-safe="true"
        type="button"
      >
        Reset
      </button>
    </div>
    <div
      class="pf-v6-c-console__serial"
    >
      <div
        class="pf-v6-c-empty-state"
      >
        <div
          class="pf-v6-c-empty-state__content"
        >
          <div
            class="pf-v6-c-empty-state__header"
          >
            <div
              class="pf-v6-c-empty-state__icon"
            >
              <svg
                aria-hidden="false"
                aria-label="Contents"
                aria-valuetext="Loading..."
                class="pf-v6-c-spinner pf-m-xl"
                role="progressbar"
                viewBox="0 0 100 100"
              >
                <circle
                  class="pf-v6-c-spinner__path"
                  cx="50"
                  cy="50"
                  fill="none"
                  r="45"
                />
              </svg>
            </div>
            <div
              class="pf-v6-c-empty-state__title"
            >
              <h1
                class="pf-v6-c-empty-state__title-text"
              >
                Loading ...
              </h1>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AccessConsoles with wrapped SerialConsole as a child 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-console"
  >
    <p>
      Serial console text
    </p>
  </div>
</DocumentFragment>
`;
